k8s/var1/setup.yaml
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: issfinder-dev-site
spec:
  selector:
    app: issfinder-dev-site
  replicas: 1
  template:
    triggers:
      - type: ImageChange
        imageChangeParams:
          automatic: true
          containerNames: ["issfinder-dev-site"]
        from:
          kind: ImageStreamTag
          name: 'issfinder-dev-site:latest'
    metadata:
      labels:
        app: issfinder-dev-site
    spec:
      containers:
        - name: issfinder-dev-site
          image: 'image-registry.openshift-image-registry.svc:5000/issfinder/issfinder-dev-site:latest'
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: issfinder-dev-site
spec:
  selector:
    app: issfinder-dev-site
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: issfinder-dev-site
spec:
  to:
    kind: Service
    name: issfinder-dev-site
  port:
    targetPort: 8080
  wildcardPolicy: None
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: issfinder
spec:
  selector:
    app: issfinder
  replicas: 1
  template:
    triggers:
      - type: ImageChange
        imageChangeParams:
          automatic: true
          containerNames: ["issfinder"]
        from:
          kind: ImageStreamTag
          name: 'issfinder:latest'
    metadata:
      labels:
        app: issfinder
    spec:
      containers:
        - name: issfinder
          image: 'image-registry.openshift-image-registry.svc:5000/issfinder/issfinder:latest'
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: issfinder
spec:
  selector:
    app: issfinder
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: issfinder
spec:
  to:
    kind: Service
    name: issfinder
  port:
    targetPort: 8080
  wildcardPolicy: None
